# fsd

./: CMakeLists.txt  CREDITS.txt  README.md  README.original.txt  README_FSFDT.txt
.github/workflows/: cmake.yml
docs/: protocol.txt
fsd/: Makefile  attributes.h  authenticate.c  authenticate.h  certificate.cpp  certificate.h  client.cpp  client.h  clinterface.cpp  clinterface.h  cluser.cpp  cluser.h  config.cpp  config.h  fsd.cpp  fsd.dsp  fsd.dsw  fsd.h  fsd.ncb  fsd.opt  fsdpaths.h  global.h  interface.cpp  interface.h  main.cpp  manage.cpp  manage.h  mm.cpp  mm.h  process.cpp  process.h  protocol.h  server.cpp  server.h  servinterface.cpp  servinterface.h  servuser.cpp  servuser.h  support.cpp  support.h  (+8 more)
unix/: adminhelp.txt  cert.txt  fsd.conf  fsd.sh  fsd_d.sh  killfsd.sh  motd.txt
windows/: Readme.txt  Run.bat  Service Install.bat  Service Uninstall.bat  fsd.conf  motd.txt
